# score-addon-acousmoscribe

./: CMakeLists.txt  score_addon_acousmoscribe.cpp
Acousmoscribe/: Executor.cpp  Executor.hpp
Acousmoscribe/Commands/: AddKey.cpp  AddKey.hpp  AddSign.cpp  ChangeMelodicKey.cpp  ChangeMelodicKey.hpp  ChangeSign.cpp  ChangeSign.hpp  ChangeSpectralKey.cpp  ChangeSpectralKey.hpp  MoveSigns.cpp  MoveSigns.hpp  RemoveSigns.cpp  RemoveSigns.hpp
Acousmoscribe/Inspector/: Inspector.cpp  Inspector.hpp
Acousmoscribe/Model/: GrainProfile.cpp  GrainProfile.hpp  MelodicKey.cpp  MelodicKey.hpp  MelodicProfile.cpp  MelodicProfile.hpp  Process.cpp  Process.hpp  RhythmicProfile.cpp  RhythmicProfile.hpp  Sign.cpp  Sign.hpp  SpectralKey.cpp  SpectralKey.hpp  Variation.hpp
Acousmoscribe/Presenter/: Presenter.cpp  Presenter.hpp
Acousmoscribe/View/: MelodicKeyView.cpp  MelodicKeyView.hpp  SignView.cpp  SignView.hpp  SpectralKeyView.cpp  SpectralKeyView.hpp  Utils.hpp  View.cpp  View.hpp
Acousmoscribe/testModel/: testModel.cpp
